# scanfactory_test

./: README.md  pyproject.toml
app/: main.py
app/config/: config.py
app/db/: db.py
app/tree_processing/: tree_processing.py
data/: domains.db
