[tool.poetry]
name = "scanfactory-test"
version = "0.1.0"
description = ""
authors = ["fedor.khandar <fedor.khandar@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiosqlite = "^0.19.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
